@@ -33,115 +33,115 @@ import java.util.LinkedList;
  *
  * @author Kishore Subramanian (kishore@sattvamedtech.com)
  */
-public class QrsSelectionRobust {
+public class QrsSelectionRobust_Maternal {
 
-	/**
-	 * <p> Final qrs selection from the best channel selected.</p>
-	 * @param iQRS Possible set of QRS locations.
-	 * @param iStartIndex First index of confirmed QRS in the iQRS array.
-	 * @param iQrsM Set of maternal QRS locations.
-	 * @param iInterpolatedLength Length of QRS interpolated at the end in previous iteration.
-	 * @param iQRSLast Location of last QRS determined in previous iteration.
-	 * @param iRRMeanLast Mean RR of last 4 QRS determined in previous iteration.
-	 * @param iNoDetectionFlag <pre> (int) '1' if no single channel has been determined to
-	 *                contain possible QRS locations else '0'.  </pre>
-	 * @param iQrsConcat Concatenated sorted array of possible QRS locations from all channels.
-	 * @return {aQRSFinal, aInterpolatedLength, aNoDetectionFLag} : Return QRS selected and update Flags.
-	 * @throws Exception Message containing the exception.
-	 */
-	public Object[] qrsSelection(int[] iQRS, int iStartIndex, int[] iQrsM, int iInterpolatedLength, int iQRSLast,
-			double iRRMeanLast, int iNoDetectionFlag, int[] iQrsConcat) throws Exception{
+    /**
+     * <p> Final qrs selection from the best channel selected.</p>
+     * @param iQRS Possible set of QRS locations.
+     * @param iStartIndex First index of confirmed QRS in the iQRS array.
+     * @param iQrsM Set of maternal QRS locations.
+     * @param iInterpolatedLength Length of QRS interpolated at the end in previous iteration.
+     * @param iQRSLast Location of last QRS determined in previous iteration.
+     * @param iRRMeanLast Mean RR of last 4 QRS determined in previous iteration.
+     * @param iNoDetectionFlag <pre> (int) '1' if no single channel has been determined to
+     *                contain possible QRS locations else '0'.  </pre>
+     * @param iQrsConcat Concatenated sorted array of possible QRS locations from all channels.
+     * @return {aQRSFinal, aInterpolatedLength, aNoDetectionFLag} : Return QRS selected and update Flags.
+     * @throws Exception Message containing the exception.
+     */
+    public Object[] mqrsSelection(int[] iQRS, int iStartIndex, int[] iQrsM, int iInterpolatedLength, int iQRSLast,
+                                 double iRRMeanLast, int iNoDetectionFlag, int[] iQrsConcat) throws Exception{
 
-		QrsSelectionFunctions aQrsSelectionFunctions = new QrsSelectionFunctions();
+        QrsSelectionFunctions aQrsSelectionFunctions = new QrsSelectionFunctions();
 //		QrsSelectionInterpolation aQrsInterpolate = new QrsSelectionInterpolation();
 
-		int aInterpolatedLength = 0;
-		if (iStartIndex > -1) {
+        int aInterpolatedLength = 0;
+        if (iStartIndex > -1) {
 
-			/**
-			 * Forward Iteration
-			 */
+            /**
+             * Forward Iteration
+             */
 //			QrsSelectionForwardIteration aQrsForward = new QrsSelectionForwardIteration();
-			Object[] aQrsForwardOut = aQrsSelectionFunctions.qrsForwardIteration(iQRS, iStartIndex);
+            Object[] aQrsForwardOut = aQrsSelectionFunctions.qrsForwardIteration(iQRS, iStartIndex);
 
-			LinkedList<Integer> aQrsFinal = aQrsSelectionFunctions.interpolate((LinkedList<Integer>) aQrsForwardOut[0],
-					(LinkedList<Integer>) aQrsForwardOut[1], iQrsM);
+            LinkedList<Integer> aQrsFinal = aQrsSelectionFunctions.interpolate((LinkedList<Integer>) aQrsForwardOut[0],
+                    (LinkedList<Integer>) aQrsForwardOut[1], iQrsM);
 
-			/**
-			 * Interpolate at the end
-			 */
+            /**
+             * Interpolate at the end
+             */
 
-			if (aQrsFinal.getLast() <= SignalProcConstants.QRS_END_VALUE && aQrsFinal.size() >= 2) {
+            if (aQrsFinal.getLast() <= SignalProcConstants.QRS_END_VALUE && aQrsFinal.size() >= 2) {
 
-				aInterpolatedLength = aInterpolatedLength + SignalProcConstants.QRS_END_VALUE - aQrsFinal.getLast();
-				if (aInterpolatedLength < SignalProcConstants.QRS_LENGTH_MAX_INTERPOLATE) {
-					int aLenQRS = aQrsFinal.size();
-					int aDiffLast = aQrsFinal.get(aLenQRS - 1) - aQrsFinal.get(aLenQRS - 2);
+                aInterpolatedLength = aInterpolatedLength + SignalProcConstants.QRS_END_VALUE - aQrsFinal.getLast();
+                if (aInterpolatedLength < SignalProcConstants.QRS_LENGTH_MAX_INTERPOLATE) {
+                    int aLenQRS = aQrsFinal.size();
+                    int aDiffLast = aQrsFinal.get(aLenQRS - 1) - aQrsFinal.get(aLenQRS - 2);
 
-					while (aQrsFinal.getLast() <= SignalProcConstants.QRS_END_VALUE) {
-						aQrsFinal.add(aQrsFinal.getLast() + aDiffLast);
-					}
-				}
-			}
-			int aForwardLen = aQrsFinal.size();
-			/**
-			 * Backward Iteration
-			 */
+                    while (aQrsFinal.getLast() <= SignalProcConstants.QRS_END_VALUE) {
+                        aQrsFinal.add(aQrsFinal.getLast() + aDiffLast);
+                    }
+                }
+            }
+            int aForwardLen = aQrsFinal.size();
+            /**
+             * Backward Iteration
+             */
 
 //			QrsSelectionBackwardIteration aQrsBackward = new QrsSelectionBackwardIteration();
-			Object[] aQrsBackwardOut = aQrsSelectionFunctions.qrsBackwardIteration(iQRS, iStartIndex, aQrsFinal);
+            Object[] aQrsBackwardOut = aQrsSelectionFunctions.qrsBackwardIteration(iQRS, iStartIndex, aQrsFinal);
 
-			aQrsFinal = aQrsSelectionFunctions.interpolate((LinkedList<Integer>) aQrsBackwardOut[0],
-					(LinkedList<Integer>) aQrsBackwardOut[1], iQrsM);
+            aQrsFinal = aQrsSelectionFunctions.interpolate((LinkedList<Integer>) aQrsBackwardOut[0],
+                    (LinkedList<Integer>) aQrsBackwardOut[1], iQrsM);
 
-			/**
-			 * Interpolate at the start
-			 */
+            /**
+             * Interpolate at the start
+             */
 
-			if (aQrsFinal.getFirst() >= SignalProcConstants.QRS_START_VALUE && aQrsFinal.size() >= 2) {
+            if (aQrsFinal.getFirst() >= SignalProcConstants.QRS_START_VALUE && aQrsFinal.size() >= 2) {
 
-				aInterpolatedLength = aInterpolatedLength + aQrsFinal.getFirst() - SignalProcConstants.QRS_START_VALUE;
-				if (aInterpolatedLength < SignalProcConstants.QRS_LENGTH_MAX_INTERPOLATE) {
-					int aDiffLast = aQrsFinal.get(1) - aQrsFinal.get(0);
+                aInterpolatedLength = aInterpolatedLength + aQrsFinal.getFirst() - SignalProcConstants.QRS_START_VALUE;
+                if (aInterpolatedLength < SignalProcConstants.QRS_LENGTH_MAX_INTERPOLATE) {
+                    int aDiffLast = aQrsFinal.get(1) - aQrsFinal.get(0);
 
-					while (aQrsFinal.getFirst() > SignalProcConstants.QRS_START_VALUE) {
-						aQrsFinal.addFirst(aQrsFinal.getFirst() - aDiffLast);
-					}
-				}
-			}
+                    while (aQrsFinal.getFirst() > SignalProcConstants.QRS_START_VALUE) {
+                        aQrsFinal.addFirst(aQrsFinal.getFirst() - aDiffLast);
+                    }
+                }
+            }
 
-			boolean overlap = false;
+            boolean overlap = false;
 
-			if(SignalProcUtils.currentIteration > 0 && SignalProcUtils.lastQRSFetalArray.size() > 4){
-				overlap = aQrsSelectionFunctions.QrsOverlapCheck(aQrsFinal);
-			}
-			SignalProcUtils.lastQRSFetalArray.clear();
-			for (int i = 0; i < aQrsFinal.size(); i++) {
-				while (aQrsFinal.get(i) > 10000) {
-					SignalProcUtils.lastQRSFetalArray.add((aQrsFinal.get(i)-10000));
-					break;
-				}
-			}
-			if(overlap){
-				Filename.ExecutionLogs.append( "true,");
-			} else{
-				Filename.ExecutionLogs.append( "false,");
-			}
-
-
+            if(SignalProcUtils.currentIteration > 0 && SignalProcUtils.lastQRSFetalArray.size() > 4){
+                overlap = aQrsSelectionFunctions.QrsOverlapCheck(aQrsFinal);
+            }
+            SignalProcUtils.lastQRSFetalArray.clear();
+            for (int i = 0; i < aQrsFinal.size(); i++) {
+                while (aQrsFinal.get(i) > 10000) {
+                    SignalProcUtils.lastQRSFetalArray.add((aQrsFinal.get(i)-10000));
+                    break;
+                }
+            }
+            if(overlap){
+                Filename.ExecutionLogs.append( "true,");
+            } else{
+                Filename.ExecutionLogs.append( "false,");
+            }
 
 
 
-			/**
-			 * Check for first QRS within range of last RRmean n last Qrs
-			 */
-			if ( iNoDetectionFlag == 0 && iRRMeanLast !=0 ){
-				boolean aConfirmFlag = aQrsSelectionFunctions.firstQrsCheck(aQrsFinal, iQRSLast, iRRMeanLast, false);
 
 
-				if (aConfirmFlag) {
+            /**
+             * Check for first QRS within range of last RRmean n last Qrs
+             */
+            if ( iNoDetectionFlag == 0 && iRRMeanLast !=0 ){
+                boolean aConfirmFlag = aQrsSelectionFunctions.firstQrsCheck(aQrsFinal, iQRSLast, iRRMeanLast, false);
+
+
+                if (aConfirmFlag) {
                     SignalProcUtils.independentCount++;
-                    if(SignalProcUtils.independentCount == 2){
+                    if(SignalProcUtils.independentCount == 3){
                         SignalProcUtils.concatCount = 0;
                     }
 //					SignalProcUtils.lastvalidRRMeanFetal = iRRMeanLast;
@@ -149,12 +149,12 @@ public class QrsSelectionRobust {
 //					FileLoggerHelper.getInstance().sendLogData(String.format(ApplicationUtils.getCurrentTime() + " : aConfirmFlag : %d", aConfirmFlag), FileLoggerType.EXECUTION, FLApplication.mFileTimeStamp);
 ////
                     Filename.FqrsSelectionType.append("Confirm Flag\n");
-					Filename.ExecutionLogs.append("Confirm Flag,");
-					Filename.ExecutionLogs.append(iQRSLast+",");
+                    Filename.ExecutionLogs.append("Confirm Flag,");
+                    Filename.ExecutionLogs.append(iQRSLast+",");
 
 
-					return new Object[] { convertListtoArray(aQrsFinal), aInterpolatedLength, 0 };
-				} else {
+                    return new Object[] { convertListtoArray(aQrsFinal), aInterpolatedLength, 0 };
+                } else {
 				    /* NEW IMPLEMENTATION BY ARAVIND   */
 //                    aQrsSelectionFunctions.qrsIndependent(aQrsFinal);
 
@@ -166,10 +166,10 @@ public class QrsSelectionRobust {
 
                         SignalProcUtils.concatCount++;
                         SignalProcUtils.independentCount = 0;
-//                        if (SignalProcUtils.concatCount == 6) {
-////                        FileLoggerHelper.getInstance().sendLogData(ApplicationUtils.getCurrentTime() + " : QrsSelectionRobust : Six Continuous/Intermittent Concat Output", FileLoggerType.EXECUTION, FLApplication.mFileTimeStamp);
-////						throw new Exception(FLApplication.getInstance().getString(R.string.connection_issue));
-//                        }
+                        if (SignalProcUtils.concatCount == 6) {
+//                        FileLoggerHelper.getInstance().sendLogData(ApplicationUtils.getCurrentTime() + " : QrsSelectionRobust : Six Continuous/Intermittent Concat Output", FileLoggerType.EXECUTION, FLApplication.mFileTimeStamp);
+//						throw new Exception(FLApplication.getInstance().getString(R.string.connection_issue));
+                        }
 ////
                         SignalProcUtils.independantdet_flag = false;
 
@@ -215,13 +215,13 @@ public class QrsSelectionRobust {
                     }
 //					FileLoggerHelper.getInstance().sendLogData(String.format(ApplicationUtils.getCurrentTime() + " : Concatenated FQRS detection"), FileLoggerType.EXECUTION, FLApplication.mFileTimeStamp);
 
-					/**
-					 * ADD fqrsMissIndex indentification
-					 */
+                    /**
+                     * ADD fqrsMissIndex indentification
+                     */
 
-				}
-			}
-			else {
+                }
+            }
+            else {
                 SignalProcUtils.independentCount++;
                 if(SignalProcUtils.independentCount == 3){
                     SignalProcUtils.concatCount = 0;
@@ -230,24 +230,24 @@ public class QrsSelectionRobust {
                 SignalProcUtils.independantdet_flag = true;
 
                 Filename.ExecutionLogs.append("Independent,");
-				Filename.ExecutionLogs.append(iQRSLast+",");
+                Filename.ExecutionLogs.append(iQRSLast+",");
 
-				Filename.FqrsSelectionType.append("Independent \n");
+                Filename.FqrsSelectionType.append("Independent \n");
 
 //
 //				FileLoggerHelper.getInstance().sendLogData(String.format(ApplicationUtils.getCurrentTime() + " : Independent FQRS detection"), FileLoggerType.EXECUTION, FLApplication.mFileTimeStamp);
-				return new Object[] { convertListtoArray(aQrsFinal), aInterpolatedLength, 0 };
-			}
-		} else {
+                return new Object[] { convertListtoArray(aQrsFinal), aInterpolatedLength, 0 };
+            }
+        } else {
 //			FileLoggerHelper.getInstance().sendLogData(String.format(ApplicationUtils.getCurrentTime() + " : No FQRS detection"), FileLoggerType.EXECUTION, FLApplication.mFileTimeStamp);
 
             if (SignalProcUtils.lastvalidRRMeanFetal != 0) {
                 SignalProcUtils.concatCount++;
                 SignalProcUtils.independentCount = 0;
-//                if(SignalProcUtils.concatCount == 6){
-////                    FileLoggerHelper.getInstance().sendLogData(ApplicationUtils.getCurrentTime() + " : QrsSelectionRobust : Six Continuous/Intermittent Concat Output", FileLoggerType.EXECUTION, FLApplication.mFileTimeStamp);
-////					throw new Exception(FLApplication.getInstance().getString(R.string.connection_issue));
-//                }
+                if(SignalProcUtils.concatCount == 6){
+//                    FileLoggerHelper.getInstance().sendLogData(ApplicationUtils.getCurrentTime() + " : QrsSelectionRobust : Six Continuous/Intermittent Concat Output", FileLoggerType.EXECUTION, FLApplication.mFileTimeStamp);
+//					throw new Exception(FLApplication.getInstance().getString(R.string.connection_issue));
+                }
                 SignalProcUtils.independantdet_flag = false;
 
                 Object[] aQrsConcatOut = aQrsSelectionFunctions.qrsConcatenated(iQrsConcat, iQRSLast, iRRMeanLast, iQrsM);
@@ -274,35 +274,35 @@ public class QrsSelectionRobust {
                 /**
                  * ADD fqrsMissIndex indentification
                  */
-				Filename.ExecutionLogs.append("Concat,");
-				Filename.ExecutionLogs.append(iQRSLast+",");
+                Filename.ExecutionLogs.append("Concat,");
+                Filename.ExecutionLogs.append(iQRSLast+",");
 
-				Filename.FqrsSelectionType.append("Concat \n");
+                Filename.FqrsSelectionType.append("Concat \n");
                 return new Object[]{convertListtoArray(aQrsFinal), aInterpolatedLength, 1};
             }
             else {
-				Filename.ExecutionLogs.append("No Det,");
+                Filename.ExecutionLogs.append("No Det,");
 
-				Filename.FqrsSelectionType.append("No Det\n");
+                Filename.FqrsSelectionType.append("No Det\n");
 
                 return new Object[]{new int[]{}, 0, 1};
             }
-		}
+        }
 
-	}
+    }
 
-	/**
-	 * <p>Convert linked list to array.</p>
-	 * @param iQRS Input list.
-	 * @return Integer array.
-	 */
-	private int[] convertListtoArray(LinkedList<Integer> iQRS){
-		int aLen = iQRS.size();
-		int[] aQRS = new int[aLen];
-		for (int i =0; i<aLen; i++){
-			aQRS[i] = iQRS.get(i);
-		}
-		return aQRS;
-	}
+    /**
+     * <p>Convert linked list to array.</p>
+     * @param iQRS Input list.
+     * @return Integer array.
+     */
+    private int[] convertListtoArray(LinkedList<Integer> iQRS){
+        int aLen = iQRS.size();
+        int[] aQRS = new int[aLen];
+        for (int i =0; i<aLen; i++){
+            aQRS[i] = iQRS.get(i);
+        }
+        return aQRS;
+    }
 
 }
